Fix overflow on comments and media queries for post-list and post-detail

--- a/SocialMediaAngular/ClientApp/src/app/comment/comment.component.scss
+++ b/SocialMediaAngular/ClientApp/src/app/comment/comment.component.scss
@@ -11,6 +11,11 @@
     padding: 10px;
 }
 
+
+.comment-body {
+    overflow: auto;
+}
+
 .comment-author {
     font-weight: bold;
     align-self: flex-end;
