--- a/SocialMediaAngular/ClientApp/src/app/post-detail/post-detail.component.scss
+++ b/SocialMediaAngular/ClientApp/src/app/post-detail/post-detail.component.scss
@@ -17,4 +17,8 @@
     .post-container, .comment-container {
         margin: 20px 25vw;
     }
+
+    .comment-container {
+        margin-bottom: 100px;
+    }
 }
