--- a/SocialMediaAngular/ClientApp/src/app/post-list/post-list.component.scss
+++ b/SocialMediaAngular/ClientApp/src/app/post-list/post-list.component.scss
@@ -8,5 +8,6 @@
 @media only screen and (min-width: $large-breakpoint-width) {
     .post-list {
         margin: 20px 25vw;
+        margin-bottom: 100px;
     }
 }
